--- a/client/src/components/sign-in/sign-in.styles.scss
+++ b/client/src/components/sign-in/sign-in.styles.scss
@@ -11,3 +11,9 @@
     justify-content: space-between;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .sign-in {
+    padding: 0 20px 40px 20px;
+  }
+}
